--- a/scss/2.components/_2.cookies.scss
+++ b/scss/2.components/_2.cookies.scss
@@ -5,7 +5,7 @@
   left: 0;
   right: 0;
   background-color: rgba(0, 0, 0, 0.7);
-  z-index: 100;
+  z-index: 1002;
 
   & > div:first-of-type {
     position: fixed;
@@ -99,7 +99,7 @@
   }
 }
 
-.manage-cookies-button {
+.manage-consent-button {
   position: fixed;
   line-height: 22px;
   z-index: 99;
